[package]
name = "node-keyring"
version = "0.4.0"
description = "Bindings to native Mac/Linux/Windows password APIs"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "1.1.2"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
